--- a/search/templates/search/layout.html
+++ b/search/templates/search/layout.html
@@ -56,6 +56,7 @@
         <a href= "{% url 'search:index' %}">Search for payments</a>
         <a href= "{% url 'search:addpayment' %}">Add Payment</a>
         <a href= "{% url 'search:addpaymentkind' %}">Add Payment Kind</a>
+        <a href= "{% url 'search:addsupplyer' %}">Add Supplyer</a>
         {% block body %}
         {% endblock %}
 
