--- a/search/templates/search/addpaymentkind.html
+++ b/search/templates/search/addpaymentkind.html
@@ -1,5 +1,8 @@
 {% extends "search/layout.html" %}
 
+{% block title %}
+    <title>Add Payment Kind</title>
+{% endblock %}
 
 {% block body %}
     <h1>Add payment kind</h1>
