--- a/search/templates/search/addsupplyer.html
+++ b/search/templates/search/addsupplyer.html
@@ -1,5 +1,9 @@
 {% extends "search/layout.html" %}
 
+{% block title %}
+    <title>Add Supplyer</title>
+{% endblock %}
+
 {% block body %}
     <h1>Add Supplyer </h1>
 
