Made js check validation for a new payment

--- a/search/templates/search/layout.html
+++ b/search/templates/search/layout.html
@@ -3,10 +3,13 @@
 <html lang='en'>
     <head>
         {% block title %} {% endblock %}
-                      
-        <link rel="stylesheet" href="{% static 'search/styles1.css' %}">
+        
+        
+        <link rel="stylesheet" href="{% static 'search/styles3.css' %}">
 
-        {% block styleForPage %} {% endblock %}
+        
+        {% block styleForPage %}
+        {% endblock %}
            
         {% block js %} 
         <script>
