--- a/search/templates/search/addpayment.html
+++ b/search/templates/search/addpayment.html
@@ -5,17 +5,9 @@
     <title>Add Payment</title>
 {% endblock %}
  
-{% block js%}
-       
-    <script src="{% static 'C:\Users\Lena_Laptop\Documents\WebProgramming\Django\Payments\payments\search\static\search\addpayment.js'%}"></script>
-{% endblock %}     
-
-
-
-
+   
 {% block body %}
     <h1>Add payment</h1>
-    <button onClick="validateForm()">Validate</button>
     <form action="{% url 'search:addpayment' %}" method="POST">
         {% csrf_token %}
         <div>
@@ -27,7 +19,8 @@
             </select>
         
             <label for='check_number'>Check Number:</label>
-            <input type='text' name='check_number'  id='check_number'>
+            <input type='number'min='1' step='1' name='check_number'   id='check_number' placeholder="Enter check number">
+            <label id='check_error_message' class='invisible'  style="color:red;">Error</label>
         </div>
         <div>
             <label for='amount'>Amount: </label>
@@ -62,7 +55,7 @@
 
         <div>
             
-            <input type="submit" value="Add">
+            <input type="submit" value="Add" id='add_payment'>
         </div>
     </form>
 
@@ -86,3 +79,8 @@
 
     
 {% endblock %}
+
+{% block js%}
+ 
+    <script src="{% static 'C:\Users\Lena_Laptop\Documents\WebProgramming\Django\Payments\payments\search\static\search\addpayment.js'%}"></script>
+{% endblock %} 
