--- a/search/templates/search/addpaymentkind.html
+++ b/search/templates/search/addpaymentkind.html
@@ -1,7 +1,9 @@
 {% extends "search/layout.html" %}
 
 {% block title %}
-    <title>Add Payment Kind</title>
+    <title>Add Payment Kind
+        
+    </title>
 {% endblock %}
 
 {% block body %}
